First cleanup and move config into own files
svn path=/trunk/KDE/kdepim/libkholidays/; revision=546928

--- a/kioslave/sieve/CMakeLists.txt
+++ b/kioslave/sieve/CMakeLists.txt
@@ -1,6 +1,7 @@
 
 include_directories( ${SASL2_INCLUDE_DIR}  )
 
+configure_file (config-sieve.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config-sieve.h )
 
 ########### next target ###############
 
