bye-bye libemailfunctions.  see you in kdepimlibs.
Matt: if you are reading this... we miss you.

svn path=/trunk/KDE/kdepim/libkpimidentities/; revision=555290

--- a/kpimidentities/CMakeLists.txt
+++ b/kpimidentities/CMakeLists.txt
@@ -4,7 +4,7 @@ include_directories( ${CMAKE_SOURCE_DIR}/libkleo  )
 
 ########### next target ###############
 
-set(kpimidentities_LIB_SRCS identitymanager.cpp identity.cpp identitycombo.cpp ${libemailfunctions_SRCS})
+set(kpimidentities_LIB_SRCS identitymanager.cpp identity.cpp identitycombo.cpp)
 
 kde4_automoc(${kpimidentities_LIB_SRCS})
 
