Fixed-up export stuff. Note that we now install the includes in $incdir/emailfunctions, not $incdir/libemailfunctions.
Also give Matt full copyright on email.cpp and email.h.  It is his code.


svn path=/trunk/KDE/kdepimlibs/; revision=555551

--- a/libemailfunctions/CMakeLists.txt
+++ b/libemailfunctions/CMakeLists.txt
@@ -17,4 +17,4 @@ install_targets(${LIB_INSTALL_DIR} emailfunctions )
 
 ########### install files ###############
 
-install_files( /include/libemailfunctions FILES email.h )
+install_files( /include/emailfunctions FILES emailfunctions.h email.h )
