rename "libemailfunctions" source dir to "emailfunctions"
svn path=/trunk/KDE/kdepimlibs/; revision=556751

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,9 +14,9 @@ include_directories (${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR} ${KDE4_INCLUDES})
 
 
 include (ConfigureChecks.cmake)
-configure_file (config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h )
+configure_file (config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h)
 
 
-add_subdirectory(libemailfunctions)
+add_subdirectory(emailfunctions)
 
 add_subdirectory(cmake)
