--- a/libemailfunctions/tests/CMakeLists.txt
+++ b/libemailfunctions/tests/CMakeLists.txt
@@ -5,7 +5,7 @@ include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/..   )
 
 ########### next target ###############
 
-set(testemail_SRCS ${libemailfunctions_SRCS} testemail.cpp )
+set(testemail_SRCS ${emailfunctions_SRCS} testemail.cpp )
 
 kde4_automoc(${testemail_SRCS})
 
@@ -16,22 +16,3 @@ target_link_libraries(testemail  ${KDE4_KDECORE_LIBS} emailfunctions )
 ########### install files ###############
 
 endif(KDE4_BUILD_TESTS)
-
-
-
-
-#original Makefile.am contents follow:
-
-#AM_CPPFLAGS = -I$(top_srcdir)/libemailfunctions $(all_includes)
-#LDADD = ../libemailfunctions.la $(LIB_KDECORE)
-#
-#check_PROGRAMS = testidmapper testemail
-#TESTS = testidmapper testemail
-#
-#testidmapper_LDFLAGS = $(all_libraries) $(KDE_RPATH)
-#testidmapper_SOURCES = testidmapper.cpp
-#
-#testemail_LDFLAGS = $(all_libraries) $(KDE_RPATH)
-#testemail_SOURCES = testemail.cpp
-#
-#METASOURCES = AUTO
