Compile kresources and kabc.
svn path=/trunk/KDE/kdepimlibs/; revision=557252

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,5 +18,7 @@ configure_file (config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h)
 
 
 add_subdirectory(emailfunctions)
+add_subdirectory(kresources)
+add_subdirectory(kabc)
 
 add_subdirectory(cmake)
