--- a/emailfunctions/CMakeLists.txt
+++ b/emailfunctions/CMakeLists.txt
@@ -13,7 +13,7 @@ kde4_add_library(emailfunctions SHARED ${emailfunctions_LIB_SRCS})
 target_link_libraries(emailfunctions ${KDE4_KDECORE_LIBS})
 
 set_target_properties(emailfunctions PROPERTIES VERSION 1.0.0 SOVERSION 1 )
-install_targets(${LIB_INSTALL_DIR} emailfunctions )
+install(TARGETS emailfunctions  DESTINATION ${LIB_INSTALL_DIR} )
 
 ########### install files ###############
 
