-adapt to the new install stuff
Alex

svn path=/trunk/KDE/kdepim/kioslave/; revision=558250

--- a/gpgme++/interfaces/CMakeLists.txt
+++ b/gpgme++/interfaces/CMakeLists.txt
@@ -4,7 +4,7 @@
 
 ########### install files ###############
 
-install_files( /include/gpgme++/interfaces FILES  )
+#install( FILES   DESTINATION ${INCLUDE_INSTALL_DIR}/gpgme++/interfaces)
 
 
 
