--- a/syndication/rdf/CMakeLists.txt
+++ b/syndication/rdf/CMakeLists.txt
@@ -4,11 +4,11 @@
 
 ########### install files ###############
 
-install_files( /include/libsyndication/rdf FILES parser.h dublincorevocab.h dublincore.h
+install( FILES parser.h dublincorevocab.h dublincore.h
                syndicationvocab.h syndicationinfo.h contentvocab.h item.h image.h
                textinput.h document.h rssvocab.h node.h property.h literal.h resource.h
                model.h modelmaker.h rdfvocab.h sequence.h statement.h resourcewrapper.h 
-               nodevisitor.h rdf.h )
+               nodevisitor.h rdf.h DESTINATION ${INCLUDE_INSTALL_DIR}/libsyndication/rdf )
 
 
 
