--- a/syndication/rss2/CMakeLists.txt
+++ b/syndication/rss2/CMakeLists.txt
@@ -4,7 +4,7 @@
 
 ########### install files ###############
 
-install_files( /include/libsyndication/rss2 FILES category.h cloud.h document.h enclosure.h                   image.h item.h parser.h rss2.h source.h textinput.h )
+install( FILES category.h cloud.h document.h enclosure.h image.h item.h parser.h rss2.h source.h textinput.h  DESTINATION ${INCLUDE_INSTALL_DIR}/libsyndication/rss2)
 
 
 
