--- a/kcal/CMakeLists.txt
+++ b/kcal/CMakeLists.txt
@@ -314,7 +314,7 @@ add_subdirectory( tests )
 ########### install files ###############
 
 install( FILES local.desktop localdir.desktop  DESTINATION ${SERVICES_INSTALL_DIR}/kresources/kcal)
-install( FILES alarm.h attachment.h attendee.h calendar.h    calendarlocal.h calendarnull.h calendarresources.h calfilter.h calformat.h    calstorage.h customproperties.h dndfactory.h duration.h event.h    exceptions.h filestorage.h freebusy.h htmlexportsettings.h htmlexport.h icaldrag.h    icalformat.h icaltimezones.h incidencebase.h incidence.h incidenceformatter.h    journal.h kcalversion.h listbase.h period.h person.h    qtopiaformat.h recurrencerule.h recurrence.h resourcecached.h resourcecalendar.h    resourcelocalconfig.h resourcelocaldirconfig.h resourcelocaldir.h    resourcelocal.h scheduler.h libkcal_export.h    todo.h vcaldrag.h vcalformat.h  DESTINATION ${INCLUDE_INSTALL_DIR}/libkcal)
+install( FILES alarm.h attachment.h attendee.h calendar.h    calendarlocal.h calendarnull.h calendarresources.h calfilter.h calformat.h    calstorage.h customproperties.h dndfactory.h duration.h event.h    exceptions.h filestorage.h freebusy.h ${CMAKE_CURRENT_BINARY_DIR}/htmlexportsettings.h htmlexport.h icaldrag.h    icalformat.h icaltimezones.h incidencebase.h incidence.h incidenceformatter.h    journal.h kcalversion.h listbase.h period.h person.h    qtopiaformat.h recurrencerule.h recurrence.h resourcecached.h resourcecalendar.h    resourcelocalconfig.h resourcelocaldirconfig.h resourcelocaldir.h    resourcelocal.h scheduler.h libkcal_export.h    todo.h vcaldrag.h vcalformat.h  DESTINATION ${INCLUDE_INSTALL_DIR}/libkcal)
 install( FILES kcal_manager.desktop  DESTINATION ${SERVICES_INSTALL_DIR}/kresources)
 
 
