--- a/emailfunctions/CMakeLists.txt
+++ b/emailfunctions/CMakeLists.txt
@@ -12,7 +12,7 @@ kde4_add_library(emailfunctions SHARED ${emailfunctions_LIB_SRCS})
 
 target_link_libraries(emailfunctions ${KDE4_KDECORE_LIBS})
 
-set_target_properties(emailfunctions PROPERTIES VERSION 1.0.0 SOVERSION 1 )
+set_target_properties(emailfunctions PROPERTIES VERSION ${GENERIC_LIB_VERSION} SOVERSION ${GENERIC_LIB_SOVERSION} )
 install(TARGETS emailfunctions  DESTINATION ${LIB_INSTALL_DIR} )
 
 ########### install files ###############
