Add tag project Fix install files
svn path=/trunk/KDE/kdepimlibs/; revision=563352

--- a/emailfunctions/CMakeLists.txt
+++ b/emailfunctions/CMakeLists.txt
@@ -1,4 +1,4 @@
-
+project(emailfunctions)
 add_subdirectory( tests )
 
 ########### next target ###############
@@ -17,4 +17,4 @@ install(TARGETS emailfunctions  DESTINATION ${LIB_INSTALL_DIR} )
 
 ########### install files ###############
 
-install_files( /include/emailfunctions FILES emailfunctions.h email.h )
+install( FILES emailfunctions.h email.h DESTINATION ${INCLUDE_INSTALL_DIR}/emailfunctions  )
