--- a/kcal/CMakeLists.txt
+++ b/kcal/CMakeLists.txt
@@ -1,4 +1,4 @@
-
+project(kcal)
 
 ADD_DEFINITIONS(-DPACKAGE_DATA_DIR=\\""${CMAKE_INSTALL_PREFIX}${DATA_INSTALL_DIR}/libical"\\" ) # added manually
 
