--- a/kioslave/opengroupware/CMakeLists.txt
+++ b/kioslave/opengroupware/CMakeLists.txt
@@ -12,7 +12,7 @@ kde4_add_plugin(kio_opengroupware ${kio_opengroupware_PART_SRCS})
 
 kde4_install_libtool_file( ${PLUGIN_INSTALL_DIR} kio_opengroupware )
 
-target_link_libraries(kio_opengroupware  ${KDE4_KDECORE_LIBS} kcal kdepim kio )
+target_link_libraries(kio_opengroupware  ${KDE4_KDECORE_LIBS} ${KDE4_KCAL_LIBS} kdepim kio )
 
 install(TARGETS kio_opengroupware  DESTINATION ${PLUGIN_INSTALL_DIR})
 
