--- a/kcal/tests/CMakeLists.txt
+++ b/kcal/tests/CMakeLists.txt
@@ -3,8 +3,8 @@
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR} )
 
 include_directories(
-	${CMAKE_SOURCE_DIR}/libkcal
-	${CMAKE_BINARY_DIR}/libkcal/libical/src
+	${CMAKE_SOURCE_DIR}/kcal
+	${CMAKE_BINARY_DIR}/kcal/libical/src
 	
 )
 
