--- a/gpgme++/interfaces/CMakeLists.txt
+++ b/gpgme++/interfaces/CMakeLists.txt
@@ -1,16 +1,3 @@
 
+install( FILES editinteractor.h passphraseprovider.h progressprovider.h  DESTINATION ${INCLUDE_INSTALL_DIR}/gpgme++/interfaces)
 
-
-
-########### install files ###############
-
-#install( FILES   DESTINATION ${INCLUDE_INSTALL_DIR}/gpgme++/interfaces)
-
-
-
-
-#original Makefile.am contents follow:
-
-#gpgmeppinterfacesdir = $(includedir)/gpgme++/interfaces
-#gpgmeppinterfaces_HEADERS = editinteractor.h \
-#			passphraseprovider.h progressprovider.h
