disable kcal for msvc until it's compileable (http://lists.kde.org/?l=kde-core-devel&m=115346824626451&w=2)
CCMAIL: kde-pim@kde.org

svn path=/trunk/KDE/kdepimlibs/; revision=564899

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,9 @@ configure_file (config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h)
 
 
 add_subdirectory(emailfunctions)
+if(NOT MSVC)
 add_subdirectory(kcal)
+endif(NOT MSVC)
 add_subdirectory(ktnef)
 add_subdirectory(kresources)
 add_subdirectory(kabc)
