--- a/kresources/CMakeLists.txt
+++ b/kresources/CMakeLists.txt
@@ -25,7 +25,7 @@ kde4_automoc(${kresources_LIB_SRCS})
 
 kde4_add_library(kresources SHARED ${kresources_LIB_SRCS})
 
-target_link_libraries(kresources  ${KDE4_KDECORE_LIBS} kdeui kio )
+target_link_libraries(kresources  ${KDE4_KIO_LIBS} )
 
 set_target_properties(kresources PROPERTIES VERSION ${GENERIC_LIB_VERSION} SOVERSION ${GENERIC_LIB_SOVERSION} )
 install(TARGETS kresources  DESTINATION ${LIB_INSTALL_DIR} )
