replace with ${KDE4_XXX_LIBS} variables
svn path=/trunk/KDE/kdepim/kioslave/; revision=565439

--- a/kioslave/opengroupware/CMakeLists.txt
+++ b/kioslave/opengroupware/CMakeLists.txt
@@ -12,7 +12,7 @@ kde4_add_plugin(kio_opengroupware ${kio_opengroupware_PART_SRCS})
 
 kde4_install_libtool_file( ${PLUGIN_INSTALL_DIR} kio_opengroupware )
 
-target_link_libraries(kio_opengroupware  ${KDE4_KDECORE_LIBS} ${KDE4_KCAL_LIBS} kdepim ${KDE4_KIO_LIBS} )
+target_link_libraries(kio_opengroupware  ${KDE4_KDEIO_LIBS} ${KDE4_KCAL_LIBS} kdepim )
 
 install(TARGETS kio_opengroupware  DESTINATION ${PLUGIN_INSTALL_DIR})
 
