only compile kldap when ldap is there
svn path=/trunk/KDE/kdepimlibs/; revision=568382

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,11 +17,14 @@ configure_file (config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h)
 
 
 add_subdirectory(emailfunctions)
+
 if(NOT MSVC)
 add_subdirectory(kcal)
 endif(NOT MSVC)
 add_subdirectory(ktnef)
-add_subdirectory(kldap)
+if(LDAP_FOUND)
+  add_subdirectory(kldap)
+endif(LDAP_FOUND)
 add_subdirectory(kresources)
 add_subdirectory(kabc)
 
