initial import of Narayan Newton's kxmlrpcclient library (based on code from egroupware resource) into kdepimlibs
It compiles against Qt4/KDE4 now, still on the TODO: complete apidox, d pointers, tests 

CCMAIL: Narayan Newton <narayannewton@gmail.com>
CCMAIL: kde-pim@kde.org

svn path=/trunk/KDE/kdepimlibs/; revision=571528

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ configure_file (config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h)
 
 
 add_subdirectory(emailfunctions)
+add_subdirectory(kxmlrpcclient)
 
 if(NOT MSVC)
 add_subdirectory(kcal)
