--- a/kxmlrpcclient/CMakeLists.txt
+++ b/kxmlrpcclient/CMakeLists.txt
@@ -11,7 +11,7 @@ kde4_automoc(${kxmlrpcclient_LIB_SRCS})
 
 kde4_add_library(kxmlrpcclient SHARED ${kxmlrpcclient_LIB_SRCS})
 
-target_link_libraries(kxmlrpcclient ${KDE4_KDECORE_LIBS} ${KDE4_KIO_LIBS})
+target_link_libraries(kxmlrpcclient ${KDE4_KIO_LIBS})
 
 set_target_properties(kxmlrpcclient PROPERTIES VERSION ${GENERIC_LIB_VERSION} SOVERSION ${GENERIC_LIB_SOVERSION} )
 install(TARGETS kxmlrpcclient  DESTINATION ${LIB_INSTALL_DIR} )
