- Rename server.h to client.h  - Rename server.cpp to client.cpp  - Modify CMakeLists.txt to build/install client.h/.cpp  - Add a small README to describe the library
 -- Narayan Newton <narayannewton@gmail.com>


svn path=/trunk/KDE/kdepimlibs/; revision=572445

--- a/kxmlrpcclient/CMakeLists.txt
+++ b/kxmlrpcclient/CMakeLists.txt
@@ -4,7 +4,7 @@ project(kxmlrpcclient)
 ########### next target ###############
 
 set(kxmlrpcclient_LIB_SRCS
-   server.cpp
+   client.cpp
    query.cpp)
 
 kde4_automoc(${kxmlrpcclient_LIB_SRCS})
@@ -18,4 +18,4 @@ install(TARGETS kxmlrpcclient  DESTINATION ${LIB_INSTALL_DIR} )
 
 ########### install files ###############
 
-install( FILES kxmlrpcclient.h server.h query.h DESTINATION ${INCLUDE_INSTALL_DIR}/kxmlrpcclient  )
+install( FILES kxmlrpcclient.h client.h query.h DESTINATION ${INCLUDE_INSTALL_DIR}/kxmlrpcclient  )
