--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,9 @@ include (KDE4Defaults)
 include (MacroLibrary)
 
 macro_optional_find_package(Ldap)
-macro_bool_to_01(LDAP_FOUND HAVE_LDAP 1)
+macro_bool_to_01(LDAP_FOUND HAVE_LDAP)
 macro_optional_find_package(Sasl2)
-macro_bool_to_01(SASL2_FOUND HAVE_SASL2 1)
+macro_bool_to_01(SASL2_FOUND HAVE_SASL2)
 
 add_definitions (${QT_DEFINITIONS} ${KDE4_DEFINITIONS} -DHAVE_CONFIG_H=1)
 link_directories (${KDE4_LIB_DIR})
