--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,11 +7,6 @@ find_package(KDE4 REQUIRED)
 include (KDE4Defaults)
 include (MacroLibrary)
 
-macro_optional_find_package(Ldap)
-macro_bool_to_01(LDAP_FOUND HAVE_LDAP)
-macro_optional_find_package(Sasl2)
-macro_bool_to_01(SASL2_FOUND HAVE_SASL2)
-
 add_definitions (${QT_DEFINITIONS} ${KDE4_DEFINITIONS} -DHAVE_CONFIG_H=1)
 link_directories (${KDE4_LIB_DIR})
 include_directories (${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR} ${KDE4_INCLUDES})
@@ -28,12 +23,11 @@ if(NOT MSVC)
 add_subdirectory(kcal)
 endif(NOT MSVC)
 add_subdirectory(ktnef)
-if(HAVE_LDAP AND HAVE_SASL2)
 add_subdirectory(kldap)
-endif(HAVE_LDAP AND HAVE_SASL2)
-
 add_subdirectory(kresources)
 add_subdirectory(kabc)
 add_subdirectory(syndication)
 
 add_subdirectory(cmake)
+
+macro_display_feature_log()
