Alarm Class Cleanup:  - beginnings of a unit test  - full d-pointer implementation  - complete doxyification  - kdepim styling  - kdepim indenting  - eliminate all krazy issues
Note: this was a non-trivial amount of work for a moderate size class.
In particular, you can go nuts writing apidox.  But I hope to use it
as a "template" for further cleaning in kcal and elsewhere in kdepimlibs.

Drop me a line if you are interested in my style checker perl program.
I doubt the style checker will ever be integrated with krazy but I might
put it into kdesdk/scripts if there is enough interest.


svn path=/trunk/KDE/kdepimlibs/; revision=575215

--- a/kcal/tests/CMakeLists.txt
+++ b/kcal/tests/CMakeLists.txt
@@ -172,6 +172,21 @@ endif(KDE4_BUILD_TESTS)
 
 ########### next target ###############
 if(KDE4_BUILD_TESTS)
+set(testalarm_SRCS testalarm.cpp )
+
+kde4_automoc(${testalarm_SRCS})
+
+
+kde4_add_executable(testalarm RUN_UNINSTALLED ${testalarm_SRCS})
+
+target_link_libraries(testalarm  ${KDE4_KDECORE_LIBS} kcal ${QT_QTTEST_LIBRARY})
+
+add_test(libkcal-testalarm ${EXECUTABLE_OUTPUT_PATH}/testalarm)
+
+endif(KDE4_BUILD_TESTS)
+
+########### next target ###############
+if(KDE4_BUILD_TESTS)
 set(testvcalexport_SRCS testvcalexport.cpp )
 
 kde4_automoc(${testvcalexport_SRCS})
