Attendee Class Cleanup:  - beginnings of a unit test  - full d-pointer implementation  - complete doxyification  - kdepim styling  - kdepim indenting  - eliminate all krazy issues
svn path=/trunk/KDE/kdepimlibs/; revision=576268

--- a/kcal/tests/CMakeLists.txt
+++ b/kcal/tests/CMakeLists.txt
@@ -202,6 +202,21 @@ endif(KDE4_BUILD_TESTS)
 
 ########### next target ###############
 if(KDE4_BUILD_TESTS)
+set(testattendee_SRCS testattendee.cpp )
+
+kde4_automoc(${testattendee_SRCS})
+
+
+kde4_add_executable(testattendee RUN_UNINSTALLED ${testattendee_SRCS})
+
+target_link_libraries(testattendee  ${KDE4_KDECORE_LIBS} kcal ${QT_QTTEST_LIBRARY})
+
+add_test(libkcal-testattendee ${EXECUTABLE_OUTPUT_PATH}/testattendee)
+
+endif(KDE4_BUILD_TESTS)
+
+########### next target ###############
+if(KDE4_BUILD_TESTS)
 set(testvcalexport_SRCS testvcalexport.cpp )
 
 kde4_automoc(${testvcalexport_SRCS})
