add subdirs, needed to install all headers
svn path=/trunk/KDE/kdepimlibs/; revision=576281

--- a/syndication/CMakeLists.txt
+++ b/syndication/CMakeLists.txt
@@ -1,6 +1,9 @@
 
 add_subdirectory( tests ) 
 
+add_subdirectory( atom )
+add_subdirectory( rdf ) 
+add_subdirectory( rss2 ) 
 
 
 ########### next target ###############
