--- a/kcal/localdir.desktop
+++ b/kcal/localdir.desktop
@@ -1,6 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
 Name=Calendar in Local Directory
+Name[fr]=Calendrier dans un dossier local
 X-KDE-Library=kcal_localdir
 Type=Service
 ServiceTypes=KResources/Plugin
