Split the kxmlrpc tests into client and query sections. Query currently has a useless test, but more can be added later now.
svn path=/trunk/KDE/kdepimlibs/; revision=583198

--- a/kxmlrpcclient/tests/CMakeLists.txt
+++ b/kxmlrpcclient/tests/CMakeLists.txt
@@ -8,16 +8,27 @@ include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/.. ${KDE4_KIO_INCLUDES} )
 
 ########### next target ###############
 
-set(testkxmlrpc_SRCS testkxmlrpc.cpp )
+set(testclient_SRCS testclient.cpp )
 
-kde4_automoc(${testkxmlrpc_SRCS})
+kde4_automoc(${testclient_SRCS})
 
-kde4_add_executable(testkxmlrpc RUN_UNINSTALLED ${testkxmlrpc_SRCS})
+kde4_add_executable(testclient RUN_UNINSTALLED ${testclient_SRCS})
 
-target_link_libraries(testkxmlrpc  ${KDE4_KDECORE_LIBS} ${QT_QTTEST_LIBRARY} kxmlrpcclient)
+target_link_libraries(testclient  ${KDE4_KDECORE_LIBS} ${QT_QTTEST_LIBRARY} kxmlrpcclient)
 
-add_test(kxmlrpc-testkxmlrpc ${EXECUTABLE_OUTPUT_PATH}/testkxmlrpc)
+add_test(kxmlrpc-testclient ${EXECUTABLE_OUTPUT_PATH}/testclient)
 
+########## next target ##############
+
+set(testquery_SRCS testquery.cpp )
+
+kde4_automoc(${testquery_SRCS})
+
+kde4_add_executable(testquery RUN_UNINSTALLED ${testquery_SRCS})
+
+target_link_libraries(testquery  ${KDE4_KDECORE_LIBS} ${QT_QTTEST_LIBRARY} kxmlrpcclient)
+
+add_test(kxmlrpc-testquery ${EXECUTABLE_OUTPUT_PATH}/testquery)
 
 endif(KDE4_BUILD_TESTS)
 
